tests/fail/d005_dup_affine.dew
# D005: dup on affine Box value
def main = fn () {
    def b = box(42);
    dup(b)
}
